# doti

./: .gitignore  Makefile  README.md  agents.md  pyproject.toml
src/doti/: defaults.yaml  main.py
src/doti/core/: engine.py  settings.py  ui.py
src/doti/utils/: data.py
tests/: test_crossplatform.py  test_data.py  test_engine.py  test_main.py  test_settings.py  test_ui.py
