[project]
name = "doti"
version = "0.1.0"
description = "A linux dot file managment tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
doti = "doti.main:main"
