[project]
name = "doti"
version = "0.1.0"
description = "A linux dot file managment tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kalen Michael" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pip>=21.0",
]

[project.scripts]
doti = "doti.main:main"

[tool.uv]
package = false
